Prevent text overflows on article showcases

--- a/source/stylesheets/_showcase.scss
+++ b/source/stylesheets/_showcase.scss
@@ -16,8 +16,8 @@
   .summary {
     width: 600px;
     float: left;
+    overflow: hidden;
   }
-
 }
 
 @media (max-width: 960px) {
